2.2.0 - July 12, 2004

	* Tagged as 2.2.0

n/a - July 11, 2004

	* Minor script output changes
	* Repaired networking scripts broken in previous commits

n/a - July 10, 2004

	* We now use the ip program [from iproute2] instead of ipconfig [net-tools]
		to bring up/down ethernet interfaces, and local connections
	* Removed gateway backward compatibility
	* Removed ifup-eth0 ifdown-eth0 compatibility
	* Removed the "assume SERVICE=static if SERVICE is unset" compatibility
	* pass the IFCONFIG environmental variable to services, so they can locate
		the file with the parameters they must read
	* rename static to ipv4-static
	* Stage1 for network configuration via directories, ifup and ifdown modified,
	  and the static service modified
	* Stage2 for network configuration via directories complete, network was
		modified to check within subdirectories for ONBOOT=yes.  Final Stage

n/a - July 8, 2004

	* Changed iso01 to lat1 everywhere in /etc/sysconfig/console. This
	  fixes the problem with line-drawing characters.

n/a - July 7, 2004

	* Halted the computer, if unable to mount /dev as a ramfs

n/a - July 6, 2004

	* Moved the hotplug bootscript back to contrib, it will not be used in
	  the testing branch of the lfs book at this time

n/a - July 4, 2004

	* Modified ifup and ifdown to be hotplug aware

n/a - July 3, 2004

	* Change the check for ONBOOT into a source within a subshell

n/a - July 1, 2004

	* Moved hotplug start to runlevels 3-5 from sysinit

n/a - June 30, 2004

	* Pass -depth in cleanfs

n/a - June 29, 2004

	* Made the grep for ONBOOT in the network script more exact

2.1.2 - June 27, 2004

	* install the automatic module loading script by default
	* Tagged as 2.1.2

n/a - June 26, 2004

	* Fixed font for UK in /etc/sysconfig/console

n/a - June 23, 2004

	* Fixed a typo in the hotplug installation procedure

n/a - June 21, 2004

	* Re-ordered the "mount" and "echo" commands in the udev script, to
	  prevent a possible race