@@ -1,3 +1,8 @@
+n/a - July 12, 2004
+
+	* Hotplug was moved from rcsysinit.d to rc{1,2,3,4,5} to help bring up/down
+	  network interfaces started by hotplug.  This has been revoked at this time
+
 2.2.0 - July 12, 2004
 
 	* Tagged as 2.2.0
